force-app/main/default/objects/TMS_Ticket_Information__c/TMS_Ticket_Information__c.object-meta.xml
<CustomObject>
    <description>Store and report on current TMS issues</description>
    <label>TMS Ticket Information</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMS Tickets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>