force-app/main/default/objects/TMS_Ticket_Information__c/fields/Case_Notes__c.field-meta.xml
<CustomField>
    <fullName>Case_Notes__c</fullName>
    <label>Case Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>