force-app/main/default/objects/TMS_Ticket_Information__c/fields/Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method__c</fullName>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
                <default>true</default>
                <label>Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>