force-app/main/default/objects/TMS_Ticket_Information__c/fields/Date_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Issue__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date of Issue</label>
    <type>Date</type>
</CustomField>