force-app/main/default/objects/TMS_Ticket_Information__c/fields/External_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Reference_Number__c</fullName>
    <description>Ticket Reference Number for any external vendor tools (top tech)</description>
    <label>External Reference Number</label>
    <type>Url</type>
</CustomField>