force-app/main/default/objects/TMS_Ticket_Information__c/fields/Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category__c</fullName>
    <label>Issue Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TMS</fullName>
            </value>
            <value>
                <fullName>TMS Host</fullName>
            </value>
            <value>
                <fullName>USIB</fullName>
            </value>
            <value>
                <fullName>Comet</fullName>
            </value>
            <value>
                <fullName>Alliance Terminal</fullName>
            </value>
            <value>
                <fullName>MultiLoad</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>TMS SCAN</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Allocation</fullName>
            </value>
            <value>
                <fullName>BOL</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Driver Issue</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Petroex/TABS/TDS</fullName>
            </value>
            <value>
                <fullName>Shell Canada</fullName>
            </value>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>OSP</fullName>
            </value>
            <value>
                <fullName>TABS Deny/Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>