force-app/main/default/objects/TMS_Ticket_Information__c/fields/Issue_Detail__c.field-meta.xml
<CustomField>
    <fullName>Issue_Detail__c</fullName>
    <label>Issue Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>