force-app/main/default/objects/TMS_Ticket_Information__c/fields/Reason_for_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_On_Hold__c</fullName>
    <label>Reason for &quot;On Hold&quot;</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>