force-app/main/default/objects/TMS_Ticket_Information__c/fields/Resolution_Detail__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Detail__c</fullName>
    <label>Resolution Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>