force-app/main/default/objects/TMS_Ticket_Information__c/fields/SNOW_Ticket_Link__c.field-meta.xml
<CustomField>
    <fullName>SNOW_Ticket_Link__c</fullName>
    <label>SNOW Ticket Link</label>
    <type>Url</type>
</CustomField>