force-app/main/default/objects/TMS_Ticket_Information__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To</label>
    <referenceTo>TMS_Customer__c</referenceTo>
    <relationshipLabel>T&amp;S Tickets</relationshipLabel>
    <relationshipName>T_S_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>