force-app/main/default/objects/TMS_Ticket_Information__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
                <default>true</default>
                <label>NEW</label>
            </value>
            <value>
                <fullName>ASSIGNED</fullName>
            </value>
            <value>
                <fullName>IN PROGRESS</fullName>
            </value>
            <value>
                <fullName>ON HOLD</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>