force-app/main/default/objects/TMS_Ticket_Information__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Issue Subcategory</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCESS</fullName>
            </value>
            <value>
                <fullName>ACCESS/ACCOUNTS</fullName>
            </value>
            <value>
                <fullName>Account set up</fullName>
            </value>
            <value>
                <fullName>ADDITIVE</fullName>
            </value>
            <value>
                <fullName>Alarm</fullName>
            </value>
            <value>
                <fullName>Allocation</fullName>
            </value>
            <value>
                <fullName>ALLOCATIONS</fullName>
            </value>
            <value>
                <fullName>BACKUP</fullName>
            </value>
            <value>
                <fullName>BACKUPS</fullName>
            </value>
            <value>
                <fullName>Badges</fullName>
            </value>
            <value>
                <fullName>BIZTALK</fullName>
            </value>
            <value>
                <fullName>BOL</fullName>
            </value>
            <value>
                <fullName>BUSINESS PROCESS</fullName>
            </value>
            <value>
                <fullName>Caller Checking- Record did not roll</fullName>
            </value>
            <value>
                <fullName>Cancel/Rebill by LSS</fullName>
            </value>
            <value>
                <fullName>Cancel/Rebill by Terminal Ops</fullName>
            </value>
            <value>
                <fullName>Carding in Wrong</fullName>
            </value>
            <value>
                <fullName>Carrier Add</fullName>
            </value>
            <value>
                <fullName>Carrier Add/Removed</fullName>
            </value>
            <value>
                <fullName>Carrier Removed</fullName>
            </value>
            <value>
                <fullName>CHANGES</fullName>
            </value>
            <value>
                <fullName>Check/Request Setup</fullName>
            </value>
            <value>
                <fullName>Check Blend Corrected</fullName>
            </value>
            <value>
                <fullName>Check Blend TO Corrected</fullName>
            </value>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Checking Set Up</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Communication Issue</fullName>
            </value>
            <value>
                <fullName>Communication Issue with 3rd Party</fullName>
            </value>
            <value>
                <fullName>COMMUNICATIONS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>