force-app/main/default/objects/TMS_Ticket_Information__c/fields/Terminal__c.field-meta.xml
<CustomField>
    <fullName>Terminal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TMS user enters terminal</description>
    <label>Terminal</label>
    <referenceTo>Terminal__c</referenceTo>
    <relationshipLabel>TMS Tickets</relationshipLabel>
    <relationshipName>TMS_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>