force-app/main/default/objects/TMS_Ticket_Information__c/fields/Terminal_Number__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Number__c</fullName>
    <label>Terminal Number (Old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C101 Scotford</fullName>
            </value>
            <value>
                <fullName>C116 Sherwood</fullName>
            </value>
            <value>
                <fullName>C123 Kingston</fullName>
            </value>
            <value>
                <fullName>C125 Sarnia</fullName>
            </value>
            <value>
                <fullName>C126 Hamilton</fullName>
            </value>
            <value>
                <fullName>C131 Ottawa</fullName>
            </value>
            <value>
                <fullName>C134 Sault Ste. Marie</fullName>
            </value>
            <value>
                <fullName>C136 Keele</fullName>
            </value>
            <value>
                <fullName>C138 Bare Point</fullName>
            </value>
            <value>
                <fullName>C142 Winnipeg</fullName>
            </value>
            <value>
                <fullName>C146 Calgary</fullName>
            </value>
            <value>
                <fullName>C149 Shellburn</fullName>
            </value>
            <value>
                <fullName>C169 Montreal Marketing</fullName>
            </value>
            <value>
                <fullName>C173 Gretna</fullName>
            </value>
            <value>
                <fullName>C211 Montreal East</fullName>
            </value>
            <value>
                <fullName>C316 Burmount</fullName>
            </value>
            <value>
                <fullName>Y004 Van Nuys</fullName>
            </value>
            <value>
                <fullName>Y009 Colton</fullName>
            </value>
            <value>
                <fullName>Y016 Des Plaines</fullName>
            </value>
            <value>
                <fullName>Y022 Carson</fullName>
            </value>
            <value>
                <fullName>Y032 Seattle</fullName>
            </value>
            <value>
                <fullName>Y071 Sacramento</fullName>
            </value>
            <value>
                <fullName>Y076 Anacortes</fullName>
            </value>
            <value>
                <fullName>Y081 San Jose</fullName>
            </value>
            <value>
                <fullName>Y083 Portland</fullName>
            </value>
            <value>
                <fullName>Y087 Signal Hill</fullName>
            </value>
            <value>
                <fullName>Y164 Stockton</fullName>
            </value>
            <value>
                <fullName>Y314 New Haven</fullName>
            </value>
            <value>
                <fullName>Y315 Convent</fullName>
            </value>
            <value>
                <fullName>Y352 Newark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>