force-app/main/default/objects/TMS_Ticket_Information__c/fields/TMS_User__c.field-meta.xml
<CustomField>
    <fullName>TMS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TMS User requesting a new ticket</description>
    <label>TMS User</label>
    <referenceTo>TMS_Users__c</referenceTo>
    <relationshipLabel>TMS Tickets</relationshipLabel>
    <relationshipName>TMS_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>