force-app/main/default/objects/TMS_Ticket_Information__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <description>OLD field. now implemented TMS User Object</description>
    <label>User Email</label>
    <type>Email</type>
</CustomField>