force-app/main/default/objects/TMS_Ticket_Information__c/recordTypes/LSS_Ticket.recordType-meta.xml
<RecordType>
    <fullName>LSS_Ticket</fullName>
    <active>true</active>
    <description>For LSS ticket</description>
    <label>LSS Ticket</label>
</RecordType>