force-app/main/default/objects/TMS_Ticket_Information__c/recordTypes/TMS_Ticket.recordType-meta.xml
<RecordType>
    <fullName>TMS_Ticket</fullName>
    <active>true</active>
    <description>For TMS ticket</description>
    <label>TMS Ticket</label>
</RecordType>