force-app/main/default/objects/TMS_Ticket_Information__c/validationRules/Assign_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Assign_Close</fullName>
    <active>true</active>
    <description>You must close ticket before putting on close</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Closed&quot;),
$RecordType.Name = &quot;TMS Ticket&quot;, 
OR(
ISBLANK( Case_Assigned_To__c )


)
)</errorConditionFormula>
    <errorMessage>You must assign ticket before closing it</errorMessage>
</ValidationRule>