force-app/main/default/objects/TMS_Ticket_Information__c/validationRules/Assigned_OnHold.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_OnHold</fullName>
    <active>true</active>
    <description>ticket must be assigned to someone before putting on hold</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;On Hold&quot;),
$RecordType.Name = &quot;TMS Ticket&quot;, 

OR(
ISBLANK( Case_Assigned_To__c )


)
)</errorConditionFormula>
    <errorMessage>You must assign ticket before placing on hold</errorMessage>
</ValidationRule>