force-app/main/default/objects/TMS_Ticket_Information__c/validationRules/Assigning_ticket.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigning_ticket</fullName>
    <active>true</active>
    <description>ticket must be assigned in order to move to in progress</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;In Progress&quot;),
$RecordType.Name = &quot;TMS Ticket&quot;, 

OR(
ISBLANK( Case_Assigned_To__c )


)
)</errorConditionFormula>
    <errorMessage>You must assign ticket before moving it to in progress</errorMessage>
</ValidationRule>