force-app/main/default/objects/TMS_Ticket_Information__c/validationRules/Closing_Ticket.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_Ticket</fullName>
    <active>true</active>
    <description>make sure user puts how ticket was resolved</description>
    <errorConditionFormula>AND(
    TEXT(Status__c) = &quot;Closed&quot;,
    $RecordType.Name = &quot;TMS Ticket&quot;, 
    LEN(Resolution_Detail__c) = 0
)</errorConditionFormula>
    <errorDisplayField>Resolution_Detail__c</errorDisplayField>
    <errorMessage>Please fill out how ticket was resolved</errorMessage>
</ValidationRule>