force-app/main/default/objects/TMS_Ticket_Information__c/validationRules/Why_on_Hold_if_Status_on_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Why_on_Hold_if_Status_on_Hold</fullName>
    <active>true</active>
    <description>make sure user puts on hold reason</description>
    <errorConditionFormula>AND (ISPICKVAL( Status__c , &apos;On Hold&apos;),
$RecordType.Name = &quot;TMS Ticket&quot;, 
 ISBLANK( Reason_for_On_Hold__c))</errorConditionFormula>
    <errorDisplayField>Reason_for_On_Hold__c</errorDisplayField>
    <errorMessage>You must give a reason for why status is on hold</errorMessage>
</ValidationRule>