force-app/main/default/objects/TMS_Ticket_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Issue_Title__c</columns>
    <columns>Issue_Category__c</columns>
    <columns>Case_Assigned_To__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>