force-app/main/default/objects/TMS_Ticket_Information__c/listViews/LSS_Tickets.listView-meta.xml
<ListView>
    <fullName>LSS_Tickets</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date_of_Issue__c</columns>
    <columns>Issue_Category__c</columns>
    <columns>Subcategory__c</columns>
    <columns>Status__c</columns>
    <columns>Terminal__c</columns>
    <columns>TMS_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TMS_Ticket_Information__c.LSS_Ticket</value>
    </filters>
    <label>LSS Tickets</label>
</ListView>